0.6-x
- handle O2 and nutrients in CTD data and sections
- swSCTp(): use surface pressure as a default
- plotTS(): add arguments inSitu and referencePressure
- fix bugs reported in issues 150, 151, 153, 155, 156
- imagep(): change default drawContours to FALSE

0.6-1
- add 'adv' dataset
- generalize swN2() by adding new arg 'derivs'
- oce.plot.ts() gets new arg 'axes'
- add accessor distance()
- rename to plotTS() and plotScan() to avoid S3 check warnings
- switch makeFilter's argument asKernel to TRUE

0.5-1
- add support for ARGO drifters
- latitude() and longitude(): new argument to repeat byDepth
- addCtdColumn(): replace if column already exists
- add CTD accessors for latitude, longitude, pressure, salinity, temperaure

0.4-1
- plot.sealevel(): only show 3 panels, for clarity
- plot.ctd(): add argument 'type'
- imagep(): handle x, y, and z as image() does
- oce.plot.ts(): inferred ylim matches data range within provided xlim
- read.adv.nortek(): handle extra analog data
- add CTD accessors longitude(), latitude(), time(), elevation(), etc

0.3-1
- add read.oce.odf()
- add findInOrdered
- generalize tidem() argument list
- read.adv.nortek(): handle burst-mode data
- add datasets wilson, redfieldNP, redfieldNC, redfieldPlankton, and riley
- change data(ctd) to be derived from data(ctdRaw)
- change to monitor=FALSE for all reading functions
- add accessor functions heading(), latitude(), longitude(), pitch(),
  pressure(), processingLog(), roll(), salinity(), temperature(), time(), and
  velocity().
- rename history as processingLog
- flatten all data objects to be 1 level thick (for future matlab exports)
- add threenum() added, and use it in all summaries (for speed)

0.2-3
- head.adp() added
- tail.adp() added
- extract() added

0.2-2
- velocityStatistics() added
- new names: oceApprox() integerToAscii() rangeLimit() ctdRaw
- topoInterpolate() added
- numberAsPOSIXct(): add type 'argos'
- rename beamAttenuateAdp() as beamUnattenuateAdp()

0.2-1