@@ -1,6 +1,6 @@
 Package: oce
-Version: 0.6-6
-Date: 2011-09-25
+Version: 0.6-7
+Date: 2011-09-26
 Title: Analysis of Oceanographic data
 Author: Dan Kelley <Dan.Kelley@Dal.Ca>
 Maintainer: Dan Kelley <Dan.Kelley@Dal.Ca>
